--- a/project-client.html
+++ b/project-client.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MONDAY</title>
     <link rel="stylesheet" href="./assets/css/styles.css">
+    <link href="assets%5Ccss%5Cabout.0fcabdd2790f60f408b7.css" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
@@ -107,7 +108,7 @@
 <body>
 
     <header class="lg:pt-8 bg-white">
-        <div class="max-w-[1384px] px-3 mx-auto lg:flex hidden items-center justify-between">
+        <div class="max-w-[1384px] px-3 mx-auto lg:flex hidden items-center justify-between mb-5">
             <div class="flex items-center gap-2.5 max-w-[600px] w-full">
                 <a class="text-[#202020] font-bold text-base uppercase select-none" href="index.html">MONDAY
                 </a>
@@ -134,7 +135,7 @@
                         </label>
                     </div>
                     <div id="search__menu"
-                        class="search_shadow hidden absolute bg-[#FCFCFC] top-[60px] max-w-[316px] w-full py-2.5 px-4 rounded-2xl">
+                        class="search_shadow z-20 hidden absolute bg-[#FCFCFC] top-[60px] max-w-[316px] w-full py-2.5 px-4 rounded-2xl">
                         <p class="text-[#202020] font-bold text-xs mb-2">Top services🔥</p>
                         <div class="pb-2 border-b mb-2">
                             <a class="text-[#8F8F8F] font-medium text-[10px] p-1 border rounded-md" href="#">Social &
@@ -273,63 +274,20 @@
                 </div>
             </div>
         </div>
-        <div class="max-w-[1384px] lg:block hidden px-5 mx-auto pt-5">
-            <ul class="flex items-center justify-between">
-                <li>
-                    <a id="header_item" class="header_active py-3 px-2 text-[#9CA5B3] font-medium text-base"
-                        href="#">Social & SMM
-                    </a>
-                </li>
-                <li>
-                    <a id="header_item"
-                        class="py-3 px-2 text-[#9CA5B3] font-medium text-base border-b-[2px] border-b-transparent"
-                        href="#">SEO
-                    </a>
-                </li>
-                <li>
-                    <a id="header_item"
-                        class="py-3 px-2 text-[#9CA5B3] font-medium text-base border-b-[2px] border-b-transparent"
-                        href="#">Copywriting
-                    </a>
-                </li>
-                <li>
-                    <a id="header_item"
-                        class="py-3 px-2 text-[#9CA5B3] font-medium text-base border-b-[2px] border-b-transparent"
-                        href="#">Web Development
-                    </a>
-                </li>
-                <li>
-                    <a id="header_item"
-                        class="py-3 px-2 text-[#9CA5B3] font-medium text-base border-b-[2px] border-b-transparent"
-                        href="#">Scripts & Telegram Bots
-                    </a>
-                </li>
-                <li>
-                    <a id="header_item"
-                        class="py-3 px-2 text-[#9CA5B3] font-medium text-base border-b-[2px] border-b-transparent"
-                        href="#">Logotypes & Branding
-                    </a>
-                </li>
-                <li>
-                    <a id="header_item"
-                        class="py-3 px-2 text-[#9CA5B3] font-medium text-base border-b-[2px] border-b-transparent"
-                        href="#">Web & Mobile Design
-                    </a>
-                </li>
-                <li>
-                    <a id="header_item"
-                        class="py-3 px-2 text-[#9CA5B3] font-medium text-base border-b-[2px] border-b-transparent"
-                        href="#">Scripts & Bots
-                    </a>
-                </li>
-                <li class="flex items-center border-l pl-2">
-                    <button class="py-3 px-2 text-[#9CA5B3] font-medium text-base border-b-[2px] border-b-transparent"
-                        href="#">
-                        All Services
-                    </button>
-                    <img src="./img/header/expand.svg" alt="expand">
-                </li>
-            </ul>
+        <div class="hidden lg:block">
+            <nav class="hidden lg:block border-b-[1px] border-gray border-opacity-50 border-solid bg-white">
+                <div class="app-container flex items-center gap-[6px] overflow-auto [&::-webkit-scrollbar]:hidden">
+                    <a class="[&:first-child]:text-black [&:first-child]:font-bold [&:first-child]:after:opacity-100 relative px-4 py-3 font-Satoshi font-medium text-gray whitespace-nowrap after:w-full after:h-1 after:bg-blue after:absolute after:left-0 after:bottom-0 after:opacity-0" href="#" target="_blank"> Social &amp; SMM </a>
+                    <a class="[&:first-child]:text-black [&:first-child]:font-bold [&:first-child]:after:opacity-100 relative px-4 py-3 font-Satoshi font-medium text-gray whitespace-nowrap after:w-full after:h-1 after:bg-blue after:absolute after:left-0 after:bottom-0 after:opacity-0" href="#" target="_blank"> SEO </a>
+                    <a class="[&:first-child]:text-black [&:first-child]:font-bold [&:first-child]:after:opacity-100 relative px-4 py-3 font-Satoshi font-medium text-gray whitespace-nowrap after:w-full after:h-1 after:bg-blue after:absolute after:left-0 after:bottom-0 after:opacity-0" href="#" target="_blank"> Copywriting </a>
+                    <a class="[&:first-child]:text-black [&:first-child]:font-bold [&:first-child]:after:opacity-100 relative px-4 py-3 font-Satoshi font-medium text-gray whitespace-nowrap after:w-full after:h-1 after:bg-blue after:absolute after:left-0 after:bottom-0 after:opacity-0" href="#" target="_blank"> Web Development </a>
+                    <a class="[&:first-child]:text-black [&:first-child]:font-bold [&:first-child]:after:opacity-100 relative px-4 py-3 font-Satoshi font-medium text-gray whitespace-nowrap after:w-full after:h-1 after:bg-blue after:absolute after:left-0 after:bottom-0 after:opacity-0" href="#" target="_blank"> Marketplaces &amp; Socials </a>
+                    <a class="[&:first-child]:text-black [&:first-child]:font-bold [&:first-child]:after:opacity-100 relative px-4 py-3 font-Satoshi font-medium text-gray whitespace-nowrap after:w-full after:h-1 after:bg-blue after:absolute after:left-0 after:bottom-0 after:opacity-0" href="#" target="_blank"> Logotypes &amp; Branding </a>
+                    <a class="[&:first-child]:text-black [&:first-child]:font-bold [&:first-child]:after:opacity-100 relative px-4 py-3 font-Satoshi font-medium text-gray whitespace-nowrap after:w-full after:h-1 after:bg-blue after:absolute after:left-0 after:bottom-0 after:opacity-0" href="#" target="_blank"> Web &amp; Mobile Design </a>
+                    <a class="[&:first-child]:text-black [&:first-child]:font-bold [&:first-child]:after:opacity-100 relative px-4 py-3 font-Satoshi font-medium text-gray whitespace-nowrap after:w-full after:h-1 after:bg-blue after:absolute after:left-0 after:bottom-0 after:opacity-0" href="#" target="_blank"> Scripts &amp; Bots </a>
+                    <a class="[&:first-child]:text-black [&:first-child]:font-bold [&:first-child]:after:opacity-100 relative px-4 py-3 font-Satoshi font-medium text-gray whitespace-nowrap after:w-full after:h-1 after:bg-blue after:absolute after:left-0 after:bottom-0 after:opacity-0" href="#" target="_blank"> All Services </a>
+                </div>
+            </nav>
         </div>
         <div
             class="lg:hidden pt-12 pb-5 max-w-[1384px] pt- px-5 mx-auto w-full flex items-center gap-2 justify-between">
