--- a/index.html
+++ b/index.html
@@ -2546,9 +2546,9 @@
           <div class="w-full mt-7 lg:mt-16">
             <div class="swiper md:-mx-3 md:overflow-visible" id="projects-swiper">
               <div class="swiper-wrapper flex flex-wrap gap-2 md:gap-0 md:flex-nowrap">
-                <div class="swiper-slide basis-[calc(50%-4px)] overflow-hidden md:basis-auto md:w-96 md:px-3">
-                  <div class="bg-white rounded-xl">
-                    <div class="h-32 rounded-t-xl relative sm:h-40 shadow-[5px_5px_10px_2px] shadow-[#000]/5">
+                <div class="swiper-slide basis-[calc(50%-4px)] md:basis-auto md:w-96 md:px-3">
+                  <div class="bg-white rounded-xl" style="box-shadow: 5px 10px 30px 2px #0000001A;">
+                    <div class="h-32 rounded-t-xl relative sm:h-40 ">
                       <img class="relative z-0 img-fill" src="/img/temp/project-1.jpg" alt="">
                       <div
                         class="p-2 absolute left-0 top-0 right-0 w-full flex items-center justify-between gap-1 sm:items-start">
@@ -2601,9 +2601,9 @@
                     </div>
                   </div>
                 </div>
-                <div class="swiper-slide basis-[calc(50%-4px)] overflow-hidden md:basis-auto md:w-96 md:px-3">
-                  <div class="bg-white rounded-xl">
-                    <div class="h-32 rounded-t-xl relative sm:h-40 shadow-[5px_5px_10px_2px] shadow-[#000]/5">
+                <div class="swiper-slide basis-[calc(50%-4px)] md:basis-auto md:w-96 md:px-3">
+                  <div class="bg-white rounded-xl" style="box-shadow: 5px 10px 30px 2px #0000001A;">
+                    <div class="h-32 rounded-t-xl relative sm:h-40 ">
                       <img class="relative z-0 img-fill" src="/img/temp/project-2.jpg" alt="">
                       <div
                         class="p-2 absolute left-0 top-0 right-0 w-full flex items-center justify-between gap-1 sm:items-start">
@@ -2656,9 +2656,9 @@
                     </div>
                   </div>
                 </div>
-                <div class="swiper-slide basis-[calc(50%-4px)] overflow-hidden md:basis-auto md:w-96 md:px-3">
-                  <div class="bg-white rounded-xl">
-                    <div class="h-32 rounded-t-xl relative sm:h-40 shadow-[5px_5px_10px_2px] shadow-[#000]/5">
+                <div class="swiper-slide basis-[calc(50%-4px)] md:basis-auto md:w-96 md:px-3">
+                  <div class="bg-white rounded-xl" style="box-shadow: 5px 10px 30px 2px #0000001A;">
+                    <div class="h-32 rounded-t-xl relative sm:h-40 ">
                       <img class="relative z-0 img-fill" src="/img/temp/project-3.jpg" alt="">
                       <div
                         class="p-2 absolute left-0 top-0 right-0 w-full flex items-center justify-between gap-1 sm:items-start">
@@ -2711,9 +2711,9 @@
                     </div>
                   </div>
                 </div>
-                <div class="swiper-slide basis-[calc(50%-4px)] overflow-hidden md:basis-auto md:w-96 md:px-3">
-                  <div class="bg-white rounded-xl">
-                    <div class="h-32 rounded-t-xl relative sm:h-40 shadow-[5px_5px_10px_2px] shadow-[#000]/5">
+                <div class="swiper-slide basis-[calc(50%-4px)] md:basis-auto md:w-96 md:px-3">
+                  <div class="bg-white rounded-xl" style="box-shadow: 5px 10px 30px 2px #0000001A;">
+                    <div class="h-32 rounded-t-xl relative sm:h-40 ">
                       <img class="relative z-0 img-fill" src="/img/temp/project-2.jpg" alt="">
                       <div
                         class="p-2 absolute left-0 top-0 right-0 w-full flex items-center justify-between gap-1 sm:items-start">
