--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="overflow-x-hidden" >
 
 <head>
   <meta charset="UTF-8" />
@@ -2168,7 +2168,7 @@
       <div class="mt-8 w-full md:flex md:items-center lg:max-w-[900px] lg:mx-auto">
         <p class="font-Satoshi font-bold text-[12px] leading-tight">🔥 Top services</p>
         <div class="-mx-4 px-4 mt-4 overflow-auto [&::-webkit-scrollbar]:hidden md:mt-0">
-          <ul class="flex items-start gap-[10px] md:flex-wrap md:ml-6">
+          <ul class="flex items-start gap-[10px] flex-wrap md:ml-6">
             <li
               class="font-Satoshi font-500 text-[12px] text-opacity-50 whitespace-nowrap py-[6px] px-4 rounded-lg border-[1px] border-black/10">
               Social & SMM</li>
