--- a/chat.html
+++ b/chat.html
@@ -1086,30 +1086,43 @@
         </div>
     </div>
     <!-- Login modal -->
-    <div class="fixed inset-0 bg-[#000000]/80 p-3 z-[100] items-center justify-center flex-col hidden" data-modal="login" data-block="flex">
-      <div class="max-w-[420px]  w-full min-h-20 rounded-[36px] bg-white m-auto relative overflow-hidden">
-        <button class="size-10 z-10 rounded-xl bg-gray-fafafc flex items-center justify-center absolute right-[22px] top-[22px]" data-modal-close="login">
-          <svg class="size-5 stroke-gray-c9ca5b3">
-            <use href="/img/sprite.svg#cross">
-          </svg>
-        </button>
-        <div class="px-5 py-8 flex flex-col items-center">
-          <p class="uppercase mx-auto font-Satoshi font-bold text-xs leading-tight text-gray-cb7c3d6 underline"> Monday </p>
-          <p class="mt-5 text-center font-Satoshi font-bold text-base leading-tight text-black">Login to your profile </p>
-          <form class="mt-[15px] flex flex-col gap-[10px] w-full" id="signup-form">
-            <div class="flex items-center rounded-[14px] border-[1px] border-solid border-black/10 overflow-hidden">
-              <input class="min-h-[50px] border-none bg-none outline-none w-full max-w-full overflow-hidden px-4 font-Satoshi font-medium text-sm leading-tight text-black placeholder:text-gray-c9ca5b3" placeholder="Email*" name="email" type="text">
+    <div class="fixed inset-0 bg-[#000000]/80 p-3 z-[100] items-center justify-center flex-col hidden"
+        data-modal="login" data-block="flex">
+        <div class="max-w-[420px]  w-full min-h-20 rounded-[36px] bg-white m-auto relative overflow-hidden">
+            <button
+                class="size-10 z-10 rounded-xl bg-gray-fafafc flex items-center justify-center absolute right-[22px] top-[22px]"
+                data-modal-close="login">
+                <svg class="size-5 stroke-gray-c9ca5b3">
+                    <use href="/img/sprite.svg#cross">
+                </svg>
+            </button>
+            <div class="px-5 py-8 flex flex-col items-center">
+                <p class="uppercase mx-auto font-Satoshi font-bold text-xs leading-tight text-gray-cb7c3d6 underline">
+                    Monday </p>
+                <p class="mt-5 text-center font-Satoshi font-bold text-base leading-tight text-black">Login to your
+                    profile </p>
+                <form class="mt-[15px] flex flex-col gap-[10px] w-full" id="signup-form">
+                    <div
+                        class="flex items-center rounded-[14px] border-[1px] border-solid border-black/10 overflow-hidden">
+                        <input
+                            class="min-h-[50px] border-none bg-none outline-none w-full max-w-full overflow-hidden px-4 font-Satoshi font-medium text-sm leading-tight text-black placeholder:text-gray-c9ca5b3"
+                            placeholder="Email*" name="email" type="text">
+                    </div>
+                    <div
+                        class="flex items-center rounded-[14px] border-[1px] border-solid border-black/10 overflow-hidden">
+                        <input
+                            class="min-h-[50px] border-none bg-none outline-none w-full max-w-full overflow-hidden px-4 font-Satoshi font-medium text-sm leading-tight text-black placeholder:text-gray-c9ca5b3"
+                            placeholder="Password*" name="password" type="password">
+                        <button class="size-4 mr-5" data-type="password-btn" type="button">
+                            <img class="w-full" src="/img/icons/eye.svg" alt="">
+                        </button>
+                    </div>
+                    <button
+                        class="mt-[5px] bg-black p-4 rounded-xl font-Satoshi font-bold text-sm leading-tight text-white"
+                        type="submit">Login</button>
+                </form>
             </div>
-            <div class="flex items-center rounded-[14px] border-[1px] border-solid border-black/10 overflow-hidden">
-              <input class="min-h-[50px] border-none bg-none outline-none w-full max-w-full overflow-hidden px-4 font-Satoshi font-medium text-sm leading-tight text-black placeholder:text-gray-c9ca5b3" placeholder="Password*" name="password" type="password">
-              <button class="size-4 mr-5" data-type="password-btn" type="button">
-                <img class="w-full" src="/img/icons/eye.svg" alt="">
-              </button>
-            </div>
-            <button class="mt-[5px] bg-black p-4 rounded-xl font-Satoshi font-bold text-sm leading-tight text-white" type="submit">Login</button>
-          </form>
         </div>
-      </div>
     </div>
     <div id="offer-an-order" class="lg:bg-[#000000]/80 fixed hidden inset-0 z-[500] p-3 flex-col bg-white py-10 ">
         <div
@@ -1225,6 +1238,119 @@
             </div>
         </div>
     </div>
+
+
+    <!-- Чтобы открыть модальное окно, достаточно присвоить класс кнопке. Когда эта кнопка будет нажата, модальное окно откроется. -->
+    <!-- <button class="open_modal-btn">open</button> -->
+
+    <div id="modal"
+        class="h-screen w-full flex items-center justify-center inset-0 opacity-0 hidden bg-[#000]/70 fixed top-0 left-0 z-40">
+        <div class="max-w-[420px] bg-white rounded-[36px] p-5 mx-5">
+            <div class="flex items-center gap-[122px] justify-end mb-3">
+                <p class="text-[#B7C3D6] text-xs pb-1 border-b border-b-[#B7C3D6]">MONDAY</p>
+                <button class="close_modal-btn active:opacity-85 transition-all">
+                    <svg width="40" height="41" viewBox="0 0 40 41" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <rect y="0.5" width="40" height="40" rx="12" fill="#FAFAFC" />
+                        <path d="M25.5 15L14.5 26M14.5 15L25.5 26" stroke="#9CA5B3" stroke-width="2"
+                            stroke-linecap="round" stroke-linejoin="round" />
+                    </svg>
+                </button>
+            </div>
+            <div>
+                <h3 class="text-black font-bold text-base md:text-xl md:mb-3 mb-1 text-center">Get a verification code in Telegram</h3>
+                <p class="max-w-[312px] text-[#9CA5B3] text-center md:text-sm text-xs mx-auto mb-6">We have generated a 4-digit
+                    code to link your Telegram. Please follow the link below and enter this code
+                    in our bot.</p>
+                <div class="flex flex-col items-center space-y-4">
+
+                    <form class="flex space-x-4 pb-6 border-dashed border-b mb-2">
+                        <input type="text" maxlength="1"
+                            class="md:w-[83px] w-[60px] md:h-[50px] h-[35px] rounded-lg md:rounded-[14px] border border-gray-300 text-center md:text-lg text-base font-semibold"
+                            oninput="moveFocusNext(this)" onkeydown="moveFocusBack(event, this)"
+                            onkeypress="return isNumber(event)" />
+                        <input type="text" maxlength="1"
+                            class="md:w-[83px] w-[60px] md:h-[50px] h-[35px] rounded-lg md:rounded-[14px] border border-gray-300 text-center md:text-lg text-base font-semibold"
+                            oninput="moveFocusNext(this)" onkeydown="moveFocusBack(event, this)"
+                            onkeypress="return isNumber(event)" />
+                        <input type="text" maxlength="1"
+                            class="md:w-[83px] w-[60px] md:h-[50px] h-[35px] rounded-lg md:rounded-[14px] border border-gray-300 text-center md:text-lg text-base font-semibold"
+                            oninput="moveFocusNext(this)" onkeydown="moveFocusBack(event, this)"
+                            onkeypress="return isNumber(event)" />
+                        <input type="text" maxlength="1"
+                            class="md:w-[83px] w-[60px] md:h-[50px] h-[35px] rounded-lg md:rounded-[14px] border border-gray-300 text-center md:text-lg text-base font-semibold"
+                            oninput="moveFocusNext(this)" onkeydown="moveFocusBack(event, this)"
+                            onkeypress="return isNumber(event)" />
+                    </form>
+
+                    <a href="https://t.me" target="_blank"
+                        class="bg-blue-500 text-white font-semibold w-full justify-center py-4 rounded-[12px] inline-flex items-center space-x-2">
+                        <span>Go to Telegram</span>
+                        <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <g clip-path="url(#clip0_1947_30278)">
+                                <path fill-rule="evenodd" clip-rule="evenodd"
+                                    d="M20 10C20 15.5228 15.5228 20 10 20C4.47715 20 0 15.5228 0 10C0 4.47715 4.47715 0 10 0C15.5228 0 20 4.47715 20 10ZM10.3585 7.38244C9.38581 7.787 7.44188 8.62433 4.52668 9.89443C4.0533 10.0827 3.80532 10.2668 3.78274 10.4469C3.74459 10.7512 4.1257 10.8711 4.64466 11.0343C4.71525 11.0565 4.7884 11.0795 4.86338 11.1038C5.37397 11.2698 6.06079 11.464 6.41784 11.4717C6.74172 11.4787 7.10321 11.3452 7.5023 11.0711C10.2261 9.2325 11.6321 8.30317 11.7204 8.28314C11.7826 8.26901 11.8689 8.25123 11.9274 8.3032C11.9859 8.35518 11.9801 8.4536 11.9739 8.48C11.9362 8.64095 10.4402 10.0317 9.66604 10.7515C9.4247 10.9759 9.2535 11.135 9.2185 11.1714C9.14011 11.2528 9.06021 11.3298 8.98342 11.4038C8.50907 11.8611 8.15336 12.204 9.00311 12.764C9.41147 13.0331 9.73824 13.2556 10.0642 13.4776C10.4202 13.7201 10.7753 13.9619 11.2348 14.2631C11.3518 14.3398 11.4636 14.4195 11.5725 14.4971C11.9868 14.7925 12.3591 15.0578 12.8189 15.0155C13.0861 14.9909 13.3622 14.7397 13.5023 13.9903C13.8336 12.2193 14.4848 8.38205 14.6353 6.80081C14.6485 6.66227 14.6319 6.48498 14.6186 6.40715C14.6052 6.32931 14.5774 6.21842 14.4762 6.13633C14.3564 6.03911 14.1715 6.01861 14.0887 6.02007C13.7126 6.0267 13.1356 6.22735 10.3585 7.38244Z"
+                                    fill="white" />
+                            </g>
+                            <defs>
+                                <clipPath id="clip0_1947_30278">
+                                    <rect width="20" height="20" fill="white" />
+                                </clipPath>
+                            </defs>
+                        </svg>
+                    </a>
+
+                </div>
+
+                <script>
+                    function isNumber(event) {
+                        const char = String.fromCharCode(event.which);
+                        if (!/[0-9]/.test(char)) {
+                            event.preventDefault();
+                        }
+                    }
+
+                    function moveFocusNext(currentInput) {
+                        if (currentInput.value.length === 1) {
+                            const nextInput = currentInput.nextElementSibling;
+                            if (nextInput) {
+                                nextInput.focus();
+                            }
+                        }
+                    }
+
+                    function moveFocusBack(event, currentInput) {
+                        if (event.key === "Backspace" && currentInput.value === "") {
+                            const prevInput = currentInput.previousElementSibling;
+                            if (prevInput) {
+                                prevInput.focus();
+                                prevInput.value = "";
+                            }
+                        }
+                    }
+                </script>
+            </div>
+        </div>
+    </div>
+
+    <script>
+        const openModalBtn = document.querySelector('.open_modal-btn');
+        const closeModalBtn = document.querySelector('.close_modal-btn');
+        const modal = document.getElementById('modal');
+
+        openModalBtn.addEventListener('click', () => {
+            modal.classList.remove('hidden', 'opacity-0');
+            modal.classList.add('opacity-1', 'inset-1');
+            body.classList.add('h-screen', 'overflow-hidden');
+        });
+
+        closeModalBtn.addEventListener('click', () => {
+            modal.classList.remove('opacity-1', 'inset-1');
+            modal.classList.add('opacity-0', 'hidden');
+            body.classList.remove('h-screen', 'overflow-hidden');
+        });
+
+    </script>
+
     <script>
         const offerAnOrder = document.querySelector('#offer-an-order');
         const modalCloseBtn = document.querySelector('#modal-close-btn');
@@ -1234,13 +1360,13 @@
         OfferAnOpenModalButtons.forEach(button => {
             button.addEventListener('click', () => {
                 offerAnOrder.classList.remove('hidden');
-                body.classList.add('overflow-hidden' , 'h-screen')
+                body.classList.add('overflow-hidden', 'h-screen')
             });
         });
 
         modalCloseBtn.addEventListener('click', () => {
             offerAnOrder.classList.add('hidden');
-            body.classList.remove('overflow-hidden' , 'h-screen')
+            body.classList.remove('overflow-hidden', 'h-screen')
         });
     </script>
 </body>
