--- a/chat.html
+++ b/chat.html
@@ -1241,7 +1241,7 @@
 
 
     <!-- Чтобы открыть модальное окно, достаточно присвоить класс кнопке. Когда эта кнопка будет нажата, модальное окно откроется. -->
-    <button class="open_modal-btn">open</button>
+    <!-- <button class="open_modal-btn">open</button> -->
 
 
     <!-- Чтобы увидеть конкретное модальное окно, из этих 5-ти нужно оставить нужное, 
